# aleph-status-page

./: .env.example  LICENSE  docker-compose.yml
aleph-monitor/: .dockerignore  Cargo.toml  Dockerfile  README.md
aleph-monitor/src/: main.rs
aleph-monitor/src/scheduler/: plan.rs
config/alertmanager/: alertmanager.yml
config/prometheus/: prometheus.yml
config/prometheus/rules/: aleph-monitor.rules.yml
