[package]
name = "aleph-monitor"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
anyhow = "1.0.100"
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.50", features = ["derive", "env"] }
dotenv = "0.15.0"
env_logger = "0.11.8"
lazy_static = "1.5.0"
log = "0.4.28"
prometheus = "0.14.0"
reqwest = { version = "0.12.24", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = "1.48.0"
web3 = "0.19.0"
